crates/java-syntax/tests/snapshots/parser_snapshots__parse_enum_constants_with_trailing_comma.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
enum E { A, B, C, }
TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
COMMA ","
WHITESPACE " "
IDENTIFIER "B"
COMMA ","
WHITESPACE " "
IDENTIFIER "C"
COMMA ","
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..19
  ENUM_DECL@0..19
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    IDENTIFIER@5..6 "E"
    WHITESPACE@6..7 " "
    ENUM_BODY@7..19
      L_BRACE@7..8 "{"
      WHITESPACE@8..9 " "
      ENUM_CONSTANT@9..10
        IDENTIFIER@9..10 "A"
      COMMA@10..11 ","
      WHITESPACE@11..12 " "
      ENUM_CONSTANT@12..13
        IDENTIFIER@12..13 "B"
      COMMA@13..14 ","
      WHITESPACE@14..15 " "
      ENUM_CONSTANT@15..16
        IDENTIFIER@15..16 "C"
      COMMA@16..17 ","
      WHITESPACE@17..18 " "
      R_BRACE@18..19 "}"
