crates/java-syntax/tests/snapshots/parser_snapshots__parse_field_with_extends_wildcard.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<? extends Number> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "Number"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..38
  CLASS_DECL@0..38
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..38
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..36
        TYPE@10..32
          QUALIFIED_NAME@10..14
            IDENTIFIER@10..14 "List"
          TYPE_ARGUMENTS@14..32
            LESS@14..15 "<"
            TYPE_ARGUMENT@15..31
              WILDCARD_TYPE@15..31
                QUESTION@15..16 "?"
                WHITESPACE@16..17 " "
                WILDCARD_BOUNDS@17..31
                  EXTENDS_KW@17..24 "extends"
                  WHITESPACE@24..25 " "
                  TYPE@25..31
                    QUALIFIED_NAME@25..31
                      IDENTIFIER@25..31 "Number"
            GREATER@31..32 ">"
        WHITESPACE@32..33 " "
        VARIABLE_DECLARATOR_LIST@33..35
          VARIABLE_DECLARATOR@33..35
            IDENTIFIER@33..35 "xs"
        SEMICOLON@35..36 ";"
      WHITESPACE@36..37 " "
      R_BRACE@37..38 "}"
