crates/java-syntax/tests/snapshots/parser_snapshots__parse_field_with_super_wildcard.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<? super Integer> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
WHITESPACE " "
SUPER_KW "super"
WHITESPACE " "
IDENTIFIER "Integer"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..37
  CLASS_DECL@0..37
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..37
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..35
        TYPE@10..31
          QUALIFIED_NAME@10..14
            IDENTIFIER@10..14 "List"
          TYPE_ARGUMENTS@14..31
            LESS@14..15 "<"
            TYPE_ARGUMENT@15..30
              WILDCARD_TYPE@15..30
                QUESTION@15..16 "?"
                WHITESPACE@16..17 " "
                WILDCARD_BOUNDS@17..30
                  SUPER_KW@17..22 "super"
                  WHITESPACE@22..23 " "
                  TYPE@23..30
                    QUALIFIED_NAME@23..30
                      IDENTIFIER@23..30 "Integer"
            GREATER@30..31 ">"
        WHITESPACE@31..32 " "
        VARIABLE_DECLARATOR_LIST@32..34
          VARIABLE_DECLARATOR@32..34
            IDENTIFIER@32..34 "xs"
        SEMICOLON@34..35 ";"
      WHITESPACE@35..36 " "
      R_BRACE@36..37 "}"
