crates/java-syntax/tests/snapshots/parser_snapshots__parse_field_with_type_argument.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<String> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..28
  CLASS_DECL@0..28
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..28
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..26
        TYPE@10..22
          QUALIFIED_NAME@10..14
            IDENTIFIER@10..14 "List"
          TYPE_ARGUMENTS@14..22
            LESS@14..15 "<"
            TYPE_ARGUMENT@15..21
              TYPE@15..21
                QUALIFIED_NAME@15..21
                  IDENTIFIER@15..21 "String"
            GREATER@21..22 ">"
        WHITESPACE@22..23 " "
        VARIABLE_DECLARATOR_LIST@23..25
          VARIABLE_DECLARATOR@23..25
            IDENTIFIER@23..25 "xs"
        SEMICOLON@25..26 ";"
      WHITESPACE@26..27 " "
      R_BRACE@27..28 "}"
