crates/java-syntax/tests/snapshots/parser_snapshots__parse_field_with_unbounded_wildcard.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { List<?> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
QUESTION "?"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..23
  CLASS_DECL@0..23
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..23
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..21
        TYPE@10..17
          QUALIFIED_NAME@10..14
            IDENTIFIER@10..14 "List"
          TYPE_ARGUMENTS@14..17
            LESS@14..15 "<"
            TYPE_ARGUMENT@15..16
              WILDCARD_TYPE@15..16
                QUESTION@15..16 "?"
            GREATER@16..17 ">"
        WHITESPACE@17..18 " "
        VARIABLE_DECLARATOR_LIST@18..20
          VARIABLE_DECLARATOR@18..20
            IDENTIFIER@18..20 "xs"
        SEMICOLON@20..21 ";"
      WHITESPACE@21..22 " "
      R_BRACE@22..23 "}"
