crates/java-syntax/tests/snapshots/parser_snapshots__parse_for_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        for (int i = 0; i < 10; i++) {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
FOR_KW "for"
WHITESPACE " "
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "i"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "0"
SEMICOLON ";"
WHITESPACE " "
IDENTIFIER "i"
WHITESPACE " "
LESS "<"
WHITESPACE " "
INTEGER_LITERAL "10"
SEMICOLON ";"
WHITESPACE " "
IDENTIFIER "i"
PLUS_PLUS "++"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..79
  CLASS_DECL@0..78
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..78
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..76
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..76
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          FOR_STMT@39..70
            FOR_KW@39..42 "for"
            WHITESPACE@42..43 " "
            L_PAREN@43..44 "("
            LOCAL_VARIABLE_DECLARATION@44..53
              TYPE@44..47
                INT_KW@44..47 "int"
              WHITESPACE@47..48 " "
              VARIABLE_DECLARATOR_LIST@48..53
                VARIABLE_DECLARATOR@48..53
                  IDENTIFIER@48..49 "i"
                  WHITESPACE@49..50 " "
                  EQUAL@50..51 "="
                  WHITESPACE@51..52 " "
                  LITERAL@52..53
                    INTEGER_LITERAL@52..53 "0"
            SEMICOLON@53..54 ";"
            WHITESPACE@54..55 " "
            BINARY_EXPR@55..61
              LITERAL@55..56
                IDENTIFIER@55..56 "i"
              WHITESPACE@56..57 " "
              LESS@57..58 "<"
              WHITESPACE@58..59 " "
              LITERAL@59..61
                INTEGER_LITERAL@59..61 "10"
            SEMICOLON@61..62 ";"
            WHITESPACE@62..63 " "
            POSTFIX_EXPR@63..66
              LITERAL@63..64
                IDENTIFIER@63..64 "i"
              PLUS_PLUS@64..66 "++"
            R_PAREN@66..67 ")"
            WHITESPACE@67..68 " "
            BLOCK@68..70
              L_BRACE@68..69 "{"
              R_BRACE@69..70 "}"
          WHITESPACE@70..75 "\n    "
          R_BRACE@75..76 "}"
      WHITESPACE@76..77 "\n"
      R_BRACE@77..78 "}"
  WHITESPACE@78..79 "\n"
