crates/java-syntax/tests/snapshots/parser_snapshots__parse_import_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
import java.util.List;
TOKENS:
IMPORT_KW "import"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "List"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..22
  IMPORT_DECL@0..22
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..21
      IDENTIFIER@7..11 "java"
      DOT@11..12 "."
      IDENTIFIER@12..16 "util"
      DOT@16..17 "."
      IDENTIFIER@17..21 "List"
    SEMICOLON@21..22 ";"
