crates/java-syntax/tests/snapshots/parser_snapshots__parse_import_static_star.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
import static java.util.Collections.*;
TOKENS:
IMPORT_KW "import"
WHITESPACE " "
STATIC_KW "static"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "Collections"
DOT "."
STAR "*"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..38
  IMPORT_DECL@0..38
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    STATIC_KW@7..13 "static"
    WHITESPACE@13..14 " "
    IMPORT_PATH@14..37
      IDENTIFIER@14..18 "java"
      DOT@18..19 "."
      IDENTIFIER@19..23 "util"
      DOT@23..24 "."
      IDENTIFIER@24..35 "Collections"
      DOT@35..36 "."
      STAR@36..37 "*"
    SEMICOLON@37..38 ";"
