crates/java-syntax/tests/snapshots/parser_snapshots__parse_incomplete_for_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        String[] strings;
        for (String s: ) {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "strings"
SEMICOLON ";"
WHITESPACE "\n        "
FOR_KW "for"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
COLON ":"
WHITESPACE " "
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..93
  CLASS_DECL@0..92
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..92
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..90
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "func"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..90
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..56
            LOCAL_VARIABLE_DECLARATION@39..55
              TYPE@39..47
                QUALIFIED_NAME@39..45
                  IDENTIFIER@39..45 "String"
                DIMENSIONS@45..47
                  DIMENSION@45..47
                    L_BRACKET@45..46 "["
                    R_BRACKET@46..47 "]"
              WHITESPACE@47..48 " "
              VARIABLE_DECLARATOR_LIST@48..55
                VARIABLE_DECLARATOR@48..55
                  IDENTIFIER@48..55 "strings"
            SEMICOLON@55..56 ";"
          WHITESPACE@56..65 "\n        "
          ENHANCED_FOR_STMT@65..84
            FOR_KW@65..68 "for"
            WHITESPACE@68..69 " "
            L_PAREN@69..70 "("
            TYPE@70..76
              QUALIFIED_NAME@70..76
                IDENTIFIER@70..76 "String"
            WHITESPACE@76..77 " "
            VARIABLE_DECLARATOR@77..78
              IDENTIFIER@77..78 "s"
            COLON@78..79 ":"
            WHITESPACE@79..80 " "
            R_PAREN@80..81 ")"
            WHITESPACE@81..82 " "
            BLOCK@82..84
              L_BRACE@82..83 "{"
              R_BRACE@83..84 "}"
          WHITESPACE@84..89 "\n    "
          R_BRACE@89..90 "}"
      WHITESPACE@90..91 "\n"
      R_BRACE@91..92 "}"
  WHITESPACE@92..93 "\n"
